// Copyright 2021 The Chromium OS Authors. All rights reserved.
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package tast.cros.inputs;

import "google/protobuf/empty.proto";

option go_package = "chromiumos/tast/services/cros/inputs";

// TouchscreenService provides some operations of a touchscreen device.
service TouchscreenService {

  // NewChrome logs into a Chrome session as a fake user. CloseChrome must be called later
  // to clean up the associated resources.
  rpc NewChrome (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  
  // ReuseChrome passes an Option to New to make Chrome reuse the existing login session
  // from same user. CloseChrome must be called later to clean up the associated resources.
  rpc ReuseChrome (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // CloseChrome releases the resources obtained by NewChrome.
  rpc CloseChrome (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // TouchscreenTap injects a tap event to the touch screen.
  rpc TouchscreenTap (google.protobuf.Empty) returns (google.protobuf.Empty) {}

  // ReadEvtestTouchscreen reads from the evtest output and decodes the received actions on the touchscreen.
  rpc ReadEvtestTouchscreen (ReadEvtestTouchscreenRequest) returns (ReadEvtestTouchscreenResponse) {}
}

// ReadEvtestTouchscreenRequest sets the timeout for detection on the touch screen.
message ReadEvtestTouchscreenRequest {
  uint32 duration = 1;
}

// ReadEvtestTouchscreenResponse returns a bool value to indicate whether any action is received by evtest 
// on a touch screen.
message ReadEvtestTouchscreenResponse {
  bool tscreen_event_detected = 1;
}

